[package]
name = "jwks_client_rs"
version = "0.4.1"
edition = "2021"
authors = ["Mite Ristovski <mite.ristovski@hotmail.com>", "Simone Cottini <cottini.simone@gmail.com>"]
license = "MIT"
description = "JWKS-sync client implementation for Auth0"
repository = "https://github.com/primait/jwks_client"
readme = "README.md"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
jsonwebtoken = "9.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"
prima_datadog = "0.5"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
mockall = "0.11"
httpmock = "0.6"
rand = "0.8"

[[example]]
name = "get_jwks"
path = "examples/get_jwks.rs"
