[package]
name = "jwks_client_rs"
version = "0.5.1"
edition = "2021"
authors = ["Mite Ristovski <mite.ristovski@hotmail.com>", "Simone Cottini <cottini.simone@gmail.com>"]
license = "MIT"
description = "JWKS-sync client implementation for Auth0"
repository = "https://github.com/primait/jwks_client"
readme = "README.md"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
jsonwebtoken = "9.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
url = "2.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
mockall = "0.13"
httpmock = "0.7"
rand = "0.8"

[[example]]
name = "get_jwks"
path = "examples/get_jwks.rs"
